sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:9: error: not found: value c
    var a = getValeur(i-c)
                        ^