sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  for (i <- 1 to getNombreValeurs()-1) {
    
    var v = getValeur(i)
    var last = 0
    
    var a = getValeur(i-c)
    
    for (c <- 1 to i) {
      
      if (a>v) {
        
        setValeur(i-c+1,a)
        last = c
        
      }
      
    }
    
    setValeur(i-last,v)
    
  }
  
}
